update grouping in line with modeling --- vegheights unaffected

--- a/reports/locality-WALD.Rmd
+++ b/reports/locality-WALD.Rmd
@@ -76,29 +76,29 @@ grouping <- tribble(
   "T32", "T32", 0.5,
   "T33", "T33", 0.5,
   "T34", "T34", 0.5,
-  "T35", "disturbed", 0,
-  "T36", "disturbed", 0.5,
-  "T37", "disturbed", 0,
+  "T35", "artificial", 0,
+  "T36", "T36", 0.5,
+  "T37", "artificial", 0,
   "T38", "plantation forest", 10,
-  "T39", "disturbed", 0,
-  "T40", "disturbed", 0,
-  "T41", "cultivated", 0.5,
-  "T42", "disturbed", 0,
-  "T43", "disturbed", 0,
-  "T44", "cultivated", 0.5,
-  "T45", "cultivated", 0.5,
-  "T35.T37.T39.T43", "disturbed", 0,
-  "T35.T37", "disturbed", 0,
-  "V1", "fen", 0,
-  "V2", "swamp", 10,
-  "V3", "bog", 0,
-  "V4", "spring", 0,
-  "V8", "swamp", 10,
-  "V9", "fen", 0,
-  "V10", "fen", 0,
-  "V11", "disturbed", 0,
-  "V12", "disturbed", 0,
-  "V13", "disturbed", 0) 
+  "T39", "artificial", 0,
+  "T40", "T40", 0,
+  "T41", "T41", 0.5,
+  "T42", "T42", 0,
+  "T43", "artificial", 0,
+  "T44", "T44", 0.5,
+  "T45", "T45", 0.5,
+  "T35.T37.T39.T43", "artificial", 0,
+  "T35.T37", "artificial", 0,
+  "V1", "V1", 0,
+  "V2", "V2", 10,
+  "V3", "V3", 0,
+  "V4", "V4", 0,
+  "V8", "V8", 10,
+  "V9", "V9", 0,
+  "V10", "V10", 0,
+  "V11", "V11", 0,
+  "V12", "V12", 0,
+  "V13", "V13", 0)  
 
 vegheights <- grouping %>% 
   group_by(group) %>% 
