--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -1,4 +1,16 @@
 
+@techreport{aarrestadForeignNorwaySpruce2014,
+  title = {Foreign {{Norway}} Spruce ({{Picea}} Abies) Provenances in {{Norway}} and Effects on Biodiversity},
+  author = {Aarrestad, Per Arild and Myking, Tor and Stabbetorp, Odd Egil and Tollefsrud, Mari Mette},
+  year = {2014},
+  pages = {39},
+  address = {{Trondheim, Norway}},
+  institution = {{Norwegian Institute for Nature Research}},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Aarrestad et al. - 2014 - Foreign Norway spruce (Picea abies) provenances in.pdf},
+  number = {1075},
+  type = {{{NINA}} Report}
+}
+
 @techreport{appelgrenKartleggingAvKortdistansespredning2017,
   title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr{\ae}r i {{Rogaland}} Og {{Hordaland}}},
   author = {Appelgren, Leif and Torvik, Solbj{\o}rg Engen},
@@ -203,6 +215,21 @@
   number = {2}
 }
 
+@article{carrLongtermPropagulePressure2019,
+  title = {Long-Term Propagule Pressure Overwhelms Initial Community Determination of Invader Success},
+  author = {Carr, Amanda N. and Hooper, David U. and Dukes, Jeffrey S.},
+  year = {2019},
+  volume = {10},
+  pages = {e02826},
+  issn = {2150-8925},
+  doi = {10.1002/ecs2.2826},
+  copyright = {\textcopyright{} 2019 The Authors.},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Carr et al_2019_Long-term propagule pressure overwhelms initial community determination of.pdf},
+  journal = {Ecosphere},
+  language = {en},
+  number = {8}
+}
+
 @article{charlesRainforestSeedRain2017,
   title = {Rainforest Seed Rain into Abandoned Tropical {{Australian}} Pasture Is Dependent on Adjacent Rainforest Structure and Extent},
   author = {Charles, Lachlan S. and Dwyer, John M. and Mayfield, Margaret M.},
@@ -389,6 +416,21 @@
   doi = {10.1016/j.ecolmodel.2012.04.009},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Horn et al_2012_TurbSeed—A model for wind dispersal of seeds in turbulent currents based on.pdf;C\:\\Users\\julienv\\Zotero\\storage\\XVMIR2U4\\S0304380012001755.html},
   journal = {Ecological Modelling}
+}
+
+@article{joeGeneralizedPoissonDistribution2005,
+  title = {Generalized {{Poisson Distribution}}: The {{Property}} of {{Mixture}} of {{Poisson}} and {{Comparison}} with {{Negative Binomial Distribution}}},
+  shorttitle = {Generalized {{Poisson Distribution}}},
+  author = {Joe, Harry and Zhu, Rong},
+  year = {2005},
+  volume = {47},
+  pages = {219--229},
+  issn = {1521-4036},
+  doi = {10.1002/bimj.200410102},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Joe_Zhu_2005_Generalized Poisson Distribution.pdf},
+  journal = {Biometrical Journal},
+  language = {en},
+  number = {2}
 }
 
 @article{jongejansUnifyingGravityFramework2014,
@@ -635,6 +677,19 @@
   keywords = {seed dispersal},
   number = {4},
   pmid = {21613168}
+}
+
+@article{sandstromImpactsDeadWood,
+  title = {Impacts of Dead Wood Manipulation on the Biodiversity of Temperate and Boreal Forests. {{A}} Systematic Review},
+  author = {Sandstr{\"o}m, Jennie and Bernes, Claes and Junninen, Kaisa and L{\~o}hmus, Asko and Macdonald, Ellen and M{\"u}ller, J{\"o}rg and Jonsson, Bengt Gunnar},
+  volume = {0},
+  issn = {1365-2664},
+  doi = {10.1111/1365-2664.13395},
+  copyright = {\textcopyright{} 2019 The Authors Journal of Applied Ecology published by John Wiley \& Sons Ltd on behalf of British Ecological Society},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Sandström et al_Impacts of dead wood manipulation on the biodiversity of temperate and boreal.pdf;C\:\\Users\\julienv\\Zotero\\storage\\3CNTB4VG\\1365-2664.html},
+  journal = {Journal of Applied Ecology},
+  language = {en},
+  number = {0}
 }
 
 @techreport{sandvikKunnskapsstatusSpredningOg2012,
